--- a/application-dev.properties
+++ b/application-dev.properties
@@ -7,7 +7,7 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=Nani@1509
+spring.datasource.password=Vardhan@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
